Fix and temp gradiented_bar.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgainRadio</string>
+    <string name="app_name">O`Пять Радио</string>
 
     <string name="new_message_notification_title_template">New message: %1$s</string>
 
